--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     </div>
 
     <nav>
-        <a href="#" class="button"><img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.freepnglogos.com%2Fpics%2Ftwitter-x-logo&psig=AOvVaw1olT7Mq58hSNjheWn41Gap&ust=1696131700287000&source=images&cd=vfe&opi=89978449&ved=0CBAQjRxqFwoTCPjS8Y210YEDFQAAAAAdAAAAABAR" alt="Twitter"></a>
-        <a href="#" class="button"><img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpixabay.com%2Fimages%2Fsearch%2Fdiscord%2520logo%2F&psig=AOvVaw2fnUWNDGYYnNlovMjnMget&ust=1696131874892000&source=images&cd=vfe&opi=89978449&ved=0CBAQjRxqFwoTCPDLkeG10YEDFQAAAAAdAAAAABAE" alt="Discord"></a>
-        <a href="#" class="button"><img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fin.pinterest.com%2Fpin%2F625507835742489775%2F&psig=AOvVaw1qslH7bRvULbwrHSBI5BtS&ust=1696131923860000&source=images&cd=vfe&opi=89978449&ved=0CBAQjRxqFwoTCLj_sPi10YEDFQAAAAAdAAAAABAE" alt="Instagram"></a>
+        <a href="#" class="button"><img src="8f8fb43ce828a22c91c0b59f55fb91b3.png" alt="Twitter"></a>
+        <a href="#" class="button"><img src="logo-6062235_1280.webp" alt="Discord"></a>
+        <a href="#" class="button"><img src="x-logo-twitter-transparent-logo-download-3.png" alt="Instagram"></a>
     </nav>
 
     <script src="script.js"></script>
