--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <nav>
         <a href="#" class="button"><img src="8f8fb43ce828a22c91c0b59f55fb91b3.png" alt="Twitter"></a>
         <a href="#" class="button"><img src="logo-6062235_1280.webp" alt="Discord"></a>
-        <a href="#" class="button"><img src="x-logo-twitter-transparent-logo-download-3.png" alt="Instagram"></a>
+        <a href="#" class="button"><img src="Logos/X-Logo.png" alt="Instagram"></a>
     </nav>
 
     <script src="script.js"></script>
