--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     </div>
 
     <nav>
-        <a href="#" class="button"><img src="8f8fb43ce828a22c91c0b59f55fb91b3.png" alt="Twitter"></a>
-        <a href="#" class="button"><img src="logo-6062235_1280.webp" alt="Discord"></a>
-        <a href="#" class="button"><img src="Logos/X-Logo.png" alt="Instagram"></a>
+        <a href="#" class="button"><img src="Logos/X-Logo.png" alt="Twitter"></a>
+        <a href="#" class="button"><img src="Logos/Discord-Logo.png" alt="Discord"></a>
+        <a href="#" class="button"><img src="Logos/Instagram-Logo.png" alt="Instagram"></a>
     </nav>
 
     <script src="script.js"></script>
