--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <nav>
         <a href="#" class="button"><img src="Logos/X-Logo.png" alt="Twitter"></a>
         <a href="https://discord.gg/h9qFTEvUBe" class="button"><img src="Logos/Discord-Logo.png" alt="Discord"></a>
-        <a href="https://www.instagram.com/ubergdooper" class="button"><img src="Logos/Instagram-Logo.png" alt="Instagram"></a>
+        <a href="https://www.instagram.com/ubergdooper" class="button"><img src="Logos/Instagram-Logo-2.png" alt="Instagram"></a>
     </nav>
 
     <script src="script.js"></script>
