--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <div id="content">
             <h2>Bio</h2>
-            <p>Coming soon because im lazy</p>
+            <p>Coming soon because im lazy PPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPP</p>
         </div>
     </div>
 
