--- a/games.html
+++ b/games.html
@@ -5,16 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css"> <!-- Link to your external CSS file -->
-    <title>Customizable Buttons</title>
+    <title>Games | Cherry</title>
 </head>
 
 <body>
+     <!--#include virtual="header.html"-->
+    <h2>Games</h2>
     <div class="button" onclick="window.location.href='https://www.example.com/button1'">Button 1</div>
     <div class="button" onclick="window.location.href='https://www.example.com/button2'">Button 2</div>
     <div class="button" onclick="window.location.href='https://www.example.com/button3'">Button 3</div>
     <div class="button" onclick="window.location.href='https://www.example.com/button4'">Button 4</div>
     <!-- Add more buttons as needed -->
-
+    <!--#include virtual="footer.html"-->
 </body>
 
 </html>
