--- a/games.html
+++ b/games.html
@@ -16,7 +16,7 @@
     <div class="button" onclick="window.location.href='https://www.example.com/button3'">Button 3</div>
     <div class="button" onclick="window.location.href='https://www.example.com/button4'">Button 4</div>
     <!-- Add more buttons as needed -->
-    <!--#include virtual="footer.html"-->
+    include virtual="footer.html"
 </body>
 
 </html>
