--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cherry</title>
+    <link rel="icon" href="Logos/Instagram-Logo.png" type="image/Favicon">
     <link rel="stylesheet" href="styles.css">
     <a href="games.html" class="button">Games</a>
 </head>
