--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
         </div>
     </div>
 
-    <nav>
-        <a href="#" class="button"><img src="Logos/X-Logo.png" alt="Twitter"></a>
-        <a href="https://discord.gg/h9qFTEvUBe" class="button"><img src="Logos/Discord-Logo.png" alt="Discord"></a>
-        <a href="https://www.instagram.com/ubergdooper" class="button"><img src="Logos/Instagram-Logo-2.png" alt="Instagram"></a>
-    </nav>
+<nav>
+    <a href="#" class="button" target="_blank"><img src="Logos/X-Logo.png" alt="Twitter"></a>
+    <a href="https://discord.gg/h9qFTEvUBe" class="button" target="_blank"><img src="Logos/Discord-Logo.png" alt="Discord"></a>
+    <a href="https://www.instagram.com/ubergdooper" class="button" target="_blank"><img src="Logos/Instagram-Logo-2.png" alt="Instagram"></a>
+</nav>
+
 
     <script src="script.js"></script>
 </body>
