--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
 
 <nav>
-    <a href="https://twitter.com" target="_blank"   class="button"><img src="Logos/X-Logo.png" alt="Twitter"></a>
+    <a href="https://twitter.com"                   class="button"><img src="Logos/X-Logo.png" alt="Twitter"></a>
     <a href="https://discord.gg/h9qFTEvUBe"         class="button"><img src="Logos/Discord-Logo.png" alt="Discord"></a>
     <a href="https://www.instagram.com/ubergdooper" class="button"><img src="Logos/Instagram-Logo-2.png" alt="Instagram"></a>
 </nav>
