--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-    <a href="games.html" class="button">Games</a> <h1>Cherry!!</h1>
+    <a href="Subpages/games.html" class="button">Games</a> <h1>Cherry!!</h1>
     </header>
 
     <div class="container">
