--- a/Subpages/games.html
+++ b/Subpages/games.html
@@ -4,17 +4,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css"> <!-- Link to your external CSS file -->
-    <title>Games | Cherry</title>
+    <title>Cherry</title>
+    <link rel="icon" href="Logos/Instagram-Logo.png" type="image/Favicon">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <h2>Games</h2>
-    <div class="button" onclick="window.location.href='https://www.example.com/button1'">Button 1</div>
-    <div class="button" onclick="window.location.href='https://www.example.com/button2'">Button 2</div>
-    <div class="button" onclick="window.location.href='https://www.example.com/button3'">Button 3</div>
-    <div class="button" onclick="window.location.href='https://www.example.com/button4'">Button 4</div>
-    <!-- Add more buttons as needed -->
+    <header>
+        <div class="button-container">
+            <a href="Subpages/game1.html" class="game-button">
+                <img src="GameImages/game1.jpg" alt="Game 1">
+            </a>
+            <a href="Subpages/game2.html" class="game-button">
+                <img src="GameImages/game2.jpg" alt="Game 2">
+            </a>
+            <!-- Add more game buttons as needed -->
+        </div>
+        <h1>Cherry!!</h1>
+    </header>
+
+    <nav>
+        <a href="https://twitter.com" class="social-button"><img src="Logos/X-Logo.png" alt="Twitter"></a>
+        <a href="https://discord.gg/h9qFTEvUBe" class="social-button"><img src="Logos/Discord-Logo.png" alt="Discord"></a>
+        <a href="https://www.instagram.com/ubergdooper" class="social-button"><img src="Logos/Instagram-Logo-2.png" alt="Instagram"></a>
+    </nav>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
