--- a/Subpages/games.html
+++ b/Subpages/games.html
@@ -12,11 +12,11 @@
 <body>
     <header>
         <div class="button-container">
-            <a href="Subpages/game1.html" class="game-button">
-                <img src="GameImages/game1.jpg" alt="Game 1">
+            <a href="#" class="game-button">
+                <img src="#" alt="Game 1">
             </a>
-            <a href="Subpages/game2.html" class="game-button">
-                <img src="GameImages/game2.jpg" alt="Game 2">
+            <a href="#" class="game-button">
+                <img src="#" alt="Game 2">
             </a>
             <!-- Add more game buttons as needed -->
         </div>
