--- a/Subpages/games.html
+++ b/Subpages/games.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cherry</title>
+    <title>Games|Cherry</title>
     <link rel="icon" href="Logos/Instagram-Logo.png" type="image/Favicon">
     <link rel="stylesheet" href="styles.css">
 </head>
