--- a/Subpages/games.html
+++ b/Subpages/games.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Games|Cherry</title>
     <link rel="icon" href="Logos/Instagram-Logo.png" type="image/Favicon">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="Subpages/styles.css">
 </head>
 
 <body>
