--- a/Subpages/games.html
+++ b/Subpages/games.html
@@ -74,6 +74,9 @@
 </head>
 
 <body>
+<header class="header">
+    <h1>Blessed Cherries Games</h1>
+</header>
     <div class="button-container">
     <a href="Subpages/game1.html" class="game-button">
                 <img src="GameImages/game1.jpg" alt="Game 1">
