--- a/Subpages/games.html
+++ b/Subpages/games.html
@@ -11,11 +11,12 @@
             margin: 0;
             padding: 0;
             background-color: maroon;
-            color: black;
+            color: white;
         }
 
         .header {
-            background-color: #f1f1f1;
+            background-color: black; /* Set header background color to black */
+            color: white; /* Set header text color to white */
             padding: 20px;
             text-align: center;
         }
