--- a/Subpages/games.html
+++ b/Subpages/games.html
@@ -57,7 +57,7 @@
         }
 
         nav {
-            background-color: #333;
+            background-color: black;
             color: #fff;
             text-align: center;
             padding: 10px;
