--- a/Subpages/games.html
+++ b/Subpages/games.html
@@ -79,8 +79,8 @@
     <h1>Blessed Cherries Games</h1>
 </header>
     <div class="button-container">
-    <a href="Subpages/game1.html" class="game-button">
-                <img src="GameImages/game1.jpg" alt="Game 1">
+    <a href="Subpages/slope.html" class="game-button">
+                <img src="#" alt="Slope">
     </a>
         <a href="Subpages/game2.html" class="game-button">
                 <img src="GameImages/game2.jpg" alt="Game 2">
