--- a/Subpages/games.html
+++ b/Subpages/games.html
@@ -79,7 +79,7 @@
     <h1>Blessed Cherries Games</h1>
 </header>
     <div class="button-container">
-    <a href="Subpages/slope.html" class="game-button">
+    <a href="slope.html" class="game-button">
                 <img src="#" alt="Slope">
     </a>
         <a href="Subpages/game2.html" class="game-button">
