--- a/Subpages/slope.html
+++ b/Subpages/slope.html
@@ -41,7 +41,7 @@
         <h1>Play Slope Game</h1>
         <div class="embed-container">
             <!-- Embedded Link to Y8 Slope Game -->
-            <iframe src="https://www.y8.com/games/slope" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://slopegame.online/" frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
 </body>
