--- a/Subpages/slope.html
+++ b/Subpages/slope.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Slope Game</title>
-<a href="games.html" class="game-button">
+        <a href="games.html" class="social-button"> alt="Twitter"></a>
     <style>
         body {
             font-family: Arial, sans-serif;
