--- a/Subpages/slope.html
+++ b/Subpages/slope.html
@@ -34,6 +34,12 @@
             width: 100%;
             height: 100%;
         }
+        .social-button {
+            margin: 0 10px;
+            text-decoration: none;
+            color: #fff;
+        }
+
     </style>
 </head>
 
