--- a/Subpages/slope.html
+++ b/Subpages/slope.html
@@ -16,7 +16,7 @@
 
         .header {
             background-color: #333;
-            padding: 10px;
+            padding: 20px; /* Increased padding for a larger header */
             text-align: center;
         }
 
@@ -60,10 +60,10 @@
 
 <body>
     <div class="header">
-        <a href="games.html" class="social-button">Back To Games</a>
+        <h1>Play Slope Game</h1>
     </div>
     <div class="container">
-        <h1>Play Slope Game</h1>
+        <a href="games.html" class="social-button">Back To Games</a>
         <div class="embed-container">
             <!-- Embedded Link to Y8 Slope Game -->
             <iframe src="https://slopegame.online/" frameborder="0" allowfullscreen></iframe>
