--- a/Subpages/slope.html
+++ b/Subpages/slope.html
@@ -28,11 +28,13 @@
         }
 
         .embed-container {
-            position: relative;
-            padding-bottom: 60%; /* 16:9 aspect ratio */
-            height: 0;
-            overflow: hidden;
-            margin-bottom: 20px;
+    position: relative;
+    padding-bottom: 60%; /* 16:9 aspect ratio */
+    height: 0;
+    overflow: hidden;
+    margin-bottom: 40px; /* Increase margin-top to move the iframe lower */
+}
+
         }
 
         .embed-container iframe {
