--- a/Subpages/slope.html
+++ b/Subpages/slope.html
@@ -27,12 +27,13 @@
             text-align: center;
         }
 
-        .embed-container {
+      .embed-container {
     position: relative;
     padding-bottom: 60%; /* 16:9 aspect ratio */
     height: 0;
     overflow: hidden;
-    margin-bottom: 40px; /* Increase margin-top to move the iframe lower */
+    margin-top: 20px; /* Increase margin-top to move the iframe lower */
+    margin-bottom: 20px;
 }
 
         }
