--- a/Subpages/slope.html
+++ b/Subpages/slope.html
@@ -32,6 +32,7 @@
             padding-bottom: 60%; /* 16:9 aspect ratio */
             height: 0;
             overflow: hidden;
+            margin-top: 20px;
             margin-bottom: 20px;
         }
 
