--- a/Subpages/games.html
+++ b/Subpages/games.html
@@ -80,7 +80,7 @@
 </header>
     <div class="button-container">
     <a href="slope.html" class="game-button">
-                <img src="#" alt="Slope">
+                <img src="Logos/slope-game-logo4.jpg" alt="Slope">
     </a>
         <a href="Subpages/game2.html" class="game-button">
                 <img src="GameImages/game2.jpg" alt="Game 2">
