--- a/games.html
+++ b/games.html
@@ -65,11 +65,23 @@
             bottom: 0;
         }
 
-        .social-button {
-            margin: 0 8px;
-            text-decoration: none;
-            color: #fff;
-        }
+       .social-button {
+    margin: 0 10px; /* Increase the margin for better spacing */
+    text-decoration: none;
+    color: #fff;
+}
+
+.nav-container {
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    padding: 10px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
     </style>
 </head>
 
