--- a/games.html
+++ b/games.html
@@ -99,11 +99,12 @@
             <!-- Add more game buttons as needed -->
     </div>
 
-    <nav>
-        <a href="https://twitter.com" class="social-button"><img src="Logos/X-Logo.png" alt="Twitter"></a>
-        <a href="https://discord.gg/h9qFTEvUBe" class="social-button"><img src="Logos/Discord-Logo.png" alt="Discord"></a>
-        <a href="https://www.instagram.com/ubergdooper" class="social-button"><img src="Logos/Instagram-Logo-2.png" alt="Instagram"></a>
-    </nav>
+    <div class="nav-container">
+    <a href="https://twitter.com" class="social-button"><img src="Logos/X-Logo.png" alt="Twitter"></a>
+    <a href="https://discord.gg/h9qFTEvUBe" class="social-button"><img src="Logos/Discord-Logo.png" alt="Discord"></a>
+    <a href="https://www.instagram.com/ubergdooper" class="social-button"><img src="Logos/Instagram-Logo-2.png" alt="Instagram"></a>
+</div>
+
 </body>
 
 </html>
