--- a/games.html
+++ b/games.html
@@ -69,19 +69,13 @@
     margin: 0 10px; /* Increase the margin for better spacing */
     text-decoration: none;
     color: #fff;
+           
+.social-button img {
+    width: 30px; /* Adjust the width as per your preference */
+    height: 30px; /* Adjust the height as per your preference */
+    margin: 0; /* Remove any default margin */
 }
 
-.nav-container {
-    background-color: black;
-    color: #fff;
-    text-align: center;
-    padding: 10px;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-}
     </style>
 </head>
 
