--- a/games.html
+++ b/games.html
@@ -95,12 +95,11 @@
         </a>
         <!-- Add more game buttons as needed -->
     </div>
-
-    <div class="footer">
-        <a href="https://twitter.com" class="social-button"><img src="Logos/X-Logo.png" alt="Twitter"></a>
-        <a href="https://discord.gg/h9qFTEvUBe" class="social-button"><img src="Logos/Discord-Logo.png" alt="Discord"></a>
-        <a href="https://www.instagram.com/ubergdooper" class="social-button"><img src="Logos/Instagram-Logo-2.png" alt="Instagram"></a>
-    </div>
+<nav>
+    <a href="https://twitter.com"                   class="button"><img src="Logos/X-Logo.png" alt="Twitter"></a>
+    <a href="https://discord.gg/h9qFTEvUBe"         class="button"><img src="Logos/Discord-Logo.png" alt="Discord"></a>
+    <a href="https://www.instagram.com/ubergdooper" class="button"><img src="Logos/Instagram-Logo-2.png" alt="Instagram"></a>
+</nav>
 </body>
 
 </html>
