--- a/games.html
+++ b/games.html
@@ -95,6 +95,7 @@
         </a>
         <!-- Add more game buttons as needed -->
     </div>
+<head> <link rel="stylesheet" href="styles.css"> </head>
 <nav>
     <a href="https://twitter.com"                   class="button"><img src="Logos/X-Logo.png" alt="Twitter"></a>
     <a href="https://discord.gg/h9qFTEvUBe"         class="button"><img src="Logos/Discord-Logo.png" alt="Discord"></a>
