--- a/games.html
+++ b/games.html
@@ -5,80 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cherry</title>
-    <style>
-        body {
-            font-family: "Comic Sans MS", cursive, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: maroon;
-            color: white;
-        }
-
-        .header {
-            background-color: black;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
-
-        .button-container {
-            display: flex;
-            justify-content: center;
-            margin-top: 20px;
-        }
-
-        .game-button {
-            display: block;
-            margin: 10px;
-            padding: 20px;
-            border: 2px solid #333;
-            border-radius: 10px;
-            text-decoration: none;
-            color: #333;
-            text-align: center;
-            transition: all 0.3s ease;
-        }
-
-        .game-button img {
-            width: 100%;
-            height: auto;
-            border-radius: 10px;
-        }
-
-        .game-button:hover {
-            background-color: #333;
-            color: #fff;
-        }
-
-        .container {
-            max-width: 960px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-
-        .footer {
-            background-color: black;
-            color: white;
-            text-align: center;
-            padding: 10px;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-            display: flex;
-            justify-content: center;
-        }
-
-        .social-button {
-            margin: 0 10px;
-            text-decoration: none;
-            color: #fff;
-        }
-
-        .social-button img {
-            width: 24px;
-            height: 24px;
-        }
-    </style>
+    <link rel="icon" href="Logos/Instagram-Logo.png" type="image/Favicon">
+    <link rel="stylesheet" href="styles2.css">
 </head>
 
 <body>
@@ -96,17 +24,17 @@
         <!-- Add more game buttons as needed -->
     </div>
     
-<footer class="footer">
-    <a href="https://twitter.com" class="social-button">
-        <img src="Logos/X-Logo.png" alt="Twitter">
-    </a>
-    <a href="https://discord.gg/h9qFTEvUBe" class="social-button">
-        <img src="Logos/Discord-Logo.png" alt="Discord">
-    </a>
-    <a href="https://www.instagram.com/ubergdooper" class="social-button">
-        <img src="Logos/Instagram-Logo-2.png" alt="Instagram">
-    </a>
-</footer>
+    <footer class="footer">
+        <a href="https://twitter.com" class="social-button">
+            <img src="Logos/X-Logo.png" alt="Twitter">
+        </a>
+        <a href="https://discord.gg/h9qFTEvUBe" class="social-button">
+            <img src="Logos/Discord-Logo.png" alt="Discord">
+        </a>
+        <a href="https://www.instagram.com/ubergdooper" class="social-button">
+            <img src="Logos/Instagram-Logo-2.png" alt="Instagram">
+        </a>
+    </footer>
 
 </body>
 
