--- a/games.html
+++ b/games.html
@@ -16,10 +16,10 @@
 
     <div class="button-container">
         <a href="slope.html" class="game-button">
-            <img src="Logos/slope-game-logo4.jpg" alt="Slope">
+            <img src="Logos/slope-game-logo4.jpg" alt="Slope Game Logo">
         </a>
         <a href="Subpages/game2.html" class="game-button">
-            <img src="GameImages/game2.jpg" alt="Game 2">
+            <img src="GameImages/game2.jpg" alt="Game 2 Image">
         </a>
         <!-- Add more game buttons as needed -->
     </div>
