--- a/games.html
+++ b/games.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cherry</title>
     <link rel="icon" href="Logos/Instagram-Logo.png" type="image/Favicon">
-    <link rel="stylesheet" href="styles2.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
