--- a/games.html
+++ b/games.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cherry</title>
     <link rel="icon" href="Logos/Instagram-Logo.png" type="image/Favicon">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles2.css">
 </head>
 
 <body>
@@ -17,19 +17,27 @@
     <div class="button-container">
         <a href="slope.html" class="game-button">
             <img src="Logos/slope-game-logo4.jpg" alt="Slope Game Logo">
+            <span>Slope Game</span>
         </a>
         <a href="Subpages/game2.html" class="game-button">
             <img src="GameImages/game2.jpg" alt="Game 2 Image">
+            <span>Game 2</span>
         </a>
         <!-- Add more game buttons as needed -->
     </div>
-    
+
     <footer class="footer">
-      <nav>
-    <a href="https://twitter.com"                   class="button"><img src="Logos/X-Logo.png" alt="Twitter"></a>
-    <a href="https://discord.gg/h9qFTEvUBe"         class="button"><img src="Logos/Discord-Logo.png" alt="Discord"></a>
-    <a href="https://www.instagram.com/ubergdooper" class="button"><img src="Logos/Instagram-Logo-2.png" alt="Instagram"></a>
-</nav>
+        <nav>
+            <a href="https://twitter.com" class="social-button">
+                <img src="Logos/X-Logo.png" alt="Twitter Logo">
+            </a>
+            <a href="https://discord.gg/h9qFTEvUBe" class="social-button">
+                <img src="Logos/Discord-Logo.png" alt="Discord Logo">
+            </a>
+            <a href="https://www.instagram.com/ubergdooper" class="social-button">
+                <img src="Logos/Instagram-Logo-2.png" alt="Instagram Logo">
+            </a>
+        </nav>
     </footer>
 
 </body>
