--- a/games.html
+++ b/games.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cherry</title>
     <link rel="icon" href="Logos/Instagram-Logo.png" type="image/Favicon">
-    <link rel="stylesheet" href="styles2.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -19,8 +19,8 @@
             <img src="Logos/slope-game-logo4.jpg" alt="Slope Game Logo">
             <span>Slope Game</span>
         </a>
-        <a href="Subpages/game2.html" class="game-button">
-            <img src="GameImages/game2.jpg" alt="Game 2 Image">
+        <a href="#" class="game-button">
+            <img src="#" alt="Game 2 Image">
             <span>Game 2</span>
         </a>
         <!-- Add more game buttons as needed -->
