--- a/games.html
+++ b/games.html
@@ -15,7 +15,7 @@
     </header>
 
     <div class="button-container">
-        <a href="slope.html" class="game-button">
+        <a href="Subpages/slope.html" class="game-button">
             <img src="Logos/slope-game-logo4.jpg" alt="Slope Game Logo">
             <span>Slope Game</span>
         </a>
