--- a/Subpages/slope.html
+++ b/Subpages/slope.html
@@ -70,6 +70,12 @@
             <iframe src="https://slopegame.online/" frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
+
+<nav>
+    <a href="https://twitter.com"                   class="button"><img src="Logos/X-Logo.png" alt="Twitter"></a>
+    <a href="https://discord.gg/h9qFTEvUBe"         class="button"><img src="Logos/Discord-Logo.png" alt="Discord"></a>
+    <a href="https://www.instagram.com/ubergdooper" class="button"><img src="Logos/Instagram-Logo-2.png" alt="Instagram"></a>
+</nav>
 </body>
 
 </html>
