--- a/index.html
+++ b/index.html
@@ -7,27 +7,44 @@
     <title>Cherry</title>
     <link rel="icon" href="Logos/Instagram-Logo.png" type="image/Favicon">
     <link rel="stylesheet" href="styles.css">
+    <style>
+        /* Add your custom styles for the calendar iframe here */
+        .calendar-container {
+            margin: 20px auto;
+            max-width: 800px;
+            width: 100%;
+        }
+
+        iframe {
+            width: 100%;
+            height: 600px;
+            border: none;
+        }
+    </style>
 </head>
 
 <body>
     <header>
-    <a href="games.html" class="button">Games</a> <h1>Cherry!!</h1>
+        <a href="games.html" class="button">Games</a> <h1>Cherry!!</h1>
     </header>
 
     <div class="container">
         <div id="content">
             <h2>Bio</h2>
-            <p>Coming soon because im lazy</p>
+            <p>Coming soon because I'm lazy</p>
         </div>
     </div>
 
-<nav>
-    <a href="https://twitter.com"                   class="button"><img src="Logos/X-Logo.png" alt="Twitter"></a>
-    <a href="https://discord.gg/h9qFTEvUBe"         class="button"><img src="Logos/Discord-Logo.png" alt="Discord"></a>
-    <a href="https://www.instagram.com/ubergdooper" class="button"><img src="Logos/Instagram-Logo-2.png" alt="Instagram"></a>
-</nav>
+    <div class="calendar-container">
+        <iframe src="<iframe src="https://calendar.google.com/calendar/embed?src=c_7v1vq5s5kd7sq79m4gnnlolpdg%40group.calendar.google.com&ctz=America%2FChicago" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+    </div>
 
-
+    <nav>
+        <a href="https://twitter.com" class="button"><img src="Logos/X-Logo.png" alt="Twitter"></a>
+        <a href="https://discord.gg/h9qFTEvUBe" class="button"><img src="Logos/Discord-Logo.png" alt="Discord"></a>
+        <a href="https://www.instagram.com/ubergdooper" class="button"><img src="Logos/Instagram-Logo-2.png"
+                alt="Instagram"></a>
+    </nav>
 
     <script src="script.js"></script>
 </body>
