--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
 
     <div class="calendar-container">
-        <iframe src="<iframe src="https://calendar.google.com/calendar/embed?src=c_7v1vq5s5kd7sq79m4gnnlolpdg%40group.calendar.google.com&ctz=America%2FChicago" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+        <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23E67C73&ctz=America%2FChicago&showTz=1&showTabs=1&showPrint=0&showNav=0&src=Y183djF2cTVzNWtkN3NxNzltNGdubmxvbHBkZ0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23F4511E" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
     </div>
 
     <nav>
