--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </style>
 </head>
 
-<body data-theme="theme">
+<body data-theme="my-custom-theme">
     <header>
         <a href="games.html" class="button">Games</a> <h1>Cherry!!</h1>
     </header>
