--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
 </head>
 
 <body data-theme="my-custom-theme">
-    <header>
-        <a href="games.html" class="button">Games</a> <h1>Cherry!!</h1>
+    <header class="header">
+        <a href="games.html" class="button">Games</a>
+        <h1>Cherry!!</h1>
     </header>
 
     <div class="container">
