--- a/index.html
+++ b/index.html
@@ -40,12 +40,16 @@
         <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23E67C73&ctz=America%2FChicago&showTz=1&showTabs=1&showPrint=0&showNav=0&src=Y183djF2cTVzNWtkN3NxNzltNGdubmxvbHBkZ0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23F4511E" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
     </div>
 
-    <nav>
-        <a href="https://twitter.com" class="button"><img src="Logos/X-Logo.png" alt="Twitter"></a>
-        <a href="https://discord.gg/h9qFTEvUBe" class="button"><img src="Logos/Discord-Logo.png" alt="Discord"></a>
-        <a href="https://www.instagram.com/ubergdooper" class="button"><img src="Logos/Instagram-Logo-2.png"
-                alt="Instagram"></a>
-    </nav>
+   <footer class="footer">
+        <nav>
+            <a href="https://twitter.com" class="social-button">
+                <img src="Logos/X-Logo.png" alt="Twitter Logo"></a>
+            <a href="https://discord.gg/h9qFTEvUBe" class="social-button">
+                <img src="Logos/Discord-Logo.png" alt="Discord Logo"></a>
+            <a href="https://www.instagram.com/ubergdooper" class="social-button">
+                <img src="Logos/Instagram-Logo-2.png" alt="Instagram Logo"></a>
+        </nav>
+    </footer>
 
     <script src="script.js"></script>
 </body>
