--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </style>
 </head>
 
-<body data-theme="my-custom-theme">
+<body>
     <header class="header">
         <a href="games.html" class="button">Games</a>
         <h1>Cherry!!</h1>
