--- a/index.html
+++ b/index.html
@@ -41,14 +41,15 @@
     </div>
 
    <footer class="footer">
-        <nav>
-            <a href="https://twitter.com" class="social-button">
-                <img src="Logos/X-Logo.png" alt="Twitter Logo"></a>
-            <a href="https://discord.gg/h9qFTEvUBe" class="social-button">
-                <img src="Logos/Discord-Logo.png" alt="Discord Logo"></a>
-            <a href="https://www.instagram.com/ubergdooper" class="social-button">
-                <img src="Logos/Instagram-Logo-2.png" alt="Instagram Logo"></a>
-        </nav>
+      <a href="https://twitter.com" class="social-button">
+    <img src="Logos/X-Logo.png" alt="Twitter Logo">
+</a>
+<a href="https://discord.gg/h9qFTEvUBe" class="social-button">
+    <img src="Logos/Discord-Logo.png" alt="Discord Logo">
+</a>
+<a href="https://www.instagram.com/ubergdooper" class="social-button">
+    <img src="Logos/Instagram-Logo-2.png" alt="Instagram Logo">
+</a>
     </footer>
 
     <script src="script.js"></script>
