--- a/index.html
+++ b/index.html
@@ -5,21 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cherry</title>
-    <link rel="icon" href="Logos/Instagram-Logo.png" type="image/Favicon">
+    <link rel="icon" href="Logos/Instagram-Logo.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
-    <style>
-        .calendar-container {
-            margin: 20px auto;
-            max-width: 800px;
-            width: 100%;
-        }
-
-        iframe {
-            width: 100%;
-            height: 600px;
-            border: none;
-        }
-    </style>
 </head>
 
 <body>
@@ -39,16 +26,16 @@
         <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23E67C73&ctz=America%2FChicago&showTz=1&showTabs=1&showPrint=0&showNav=0&src=Y183djF2cTVzNWtkN3NxNzltNGdubmxvbHBkZ0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23F4511E" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
     </div>
 
-   <footer class="footer">
-      <a href="https://twitter.com" class="social-button">
-    <img src="Logos/X-Logo.png" alt="Twitter Logo">
-</a>
-<a href="https://discord.gg/h9qFTEvUBe" class="social-button">
-    <img src="Logos/Discord-Logo.png" alt="Discord Logo">
-</a>
-<a href="https://www.instagram.com/ubergdooper" class="social-button">
-    <img src="Logos/Instagram-Logo-2.png" alt="Instagram Logo">
-</a>
+    <footer class="footer">
+        <a href="https://twitter.com" class="social-button">
+            <img src="Logos/X-Logo.png" alt="Twitter Logo">
+        </a>
+        <a href="https://discord.gg/h9qFTEvUBe" class="social-button">
+            <img src="Logos/Discord-Logo.png" alt="Discord Logo">
+        </a>
+        <a href="https://www.instagram.com/ubergdooper" class="social-button">
+            <img src="Logos/Instagram-Logo-2.png" alt="Instagram Logo">
+        </a>
     </footer>
 
     <script src="script.js"></script>
