--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-     <header class="header">
+     <header>
         <a href="games.html" class="button">Games</a>
         <h1>Cherry!!</h1>
     </header>
