--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
 <body>
      <header>
-        <a href="games.html" class="button">Games</a>
+        <nav>
+            <a href="games.html" class="button">Games</a>
+        </nav>
         <h1>Cherry!!</h1>
     </header>
 
