--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-     <header>
+     <header class="header">
         <nav>
             <a href="games.html" class="button">Games</a>
         </nav>
