--- a/index.html
+++ b/index.html
@@ -10,11 +10,8 @@
 </head>
 
 <body>
-     <header class="header">
-        <nav>
-            <a href="games.html" class="button">Games</a>
-        </nav>
-        <h1>Cherry!!</h1>
+   <header>
+    <a href="games.html" class="button">Games</a> <h1>Cherry!!</h1>
     </header>
 
     <div class="container">
