--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,10 +7,12 @@
     <link rel="icon" href="Logos/Instagram-Logo.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-   <header>
-    <a href="games.html" class="button">Games</a> <h1>Cherry!!</h1>
+   <header class="header">
+        <a href="games.html" class="game-button">
+            Games
+        </a>
+        <h1>Cherry!!</h1>
     </header>
 
     <div class="container">
@@ -39,5 +40,4 @@
 
     <script src="script.js"></script>
 </body>
-
 </html>
