--- a/index.html
+++ b/index.html
@@ -7,12 +7,18 @@
     <link rel="icon" href="Logos/Instagram-Logo.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-   <header class="header">
-        <a href="games.html" class="game-button">
-            Games
-        </a>
+    <header class="header">
         <h1>Cherry!!</h1>
+        <div class="buttons-container">
+            <a href="#" class="tbd-button">TBD</a>
+            <a href="#" class="tbd-button">TBD</a>
+            <a href="#" class="tbd-button">TBD</a>
+            <a href="#" class="tbd-button">TBD</a>
+            <a href="#" class="tbd-button">TBD</a>
+            <a href="#" class="tbd-button">TBD</a>
+        </div>
     </header>
 
     <div class="container">
