--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <header class="header">
         <h1>Cherry!!</h1>
         <div class="buttons-container">
-            <a href="#" class="tbd-button">TBD</a>
+            <a href="games.html" class="tbd-button">
+            <img src="" alt="Games">
+            </a>
             <a href="#" class="tbd-button">TBD</a>
             <a href="#" class="tbd-button">TBD</a>
             <a href="#" class="tbd-button">TBD</a>
