--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Cherry!!</h1>
         <div class="buttons-container">
             <a href="games.html" class="tbd-button">
-            <img src="" alt="Games">
+            <img src="Logos/games.png" alt="Games">
             </a>
             <a href="#" class="tbd-button">TBD</a>
             <a href="#" class="tbd-button">TBD</a>
