--- a/Subpages/slope.html
+++ b/Subpages/slope.html
@@ -16,7 +16,7 @@
 
         .header {
             background-color: #333;
-            padding: 20px; /* Increased padding for a larger header */
+            padding: 20px; 
             text-align: center;
         }
 
@@ -29,7 +29,7 @@
 
         .embed-container {
             position: relative;
-            padding-bottom: 60%; /* 16:9 aspect ratio */
+            padding-bottom: 60%;
             height: 0;
             overflow: hidden;
             margin-top: 20px;
