--- a/Subpages/slope.html
+++ b/Subpages/slope.html
@@ -64,7 +64,7 @@
         <h1>Play Slope Game</h1>
     </div>
     <div class="container">
-        <a href="games.html" class="social-button">Back To Games</a>
+        <a href="https://incognitocherry.vercel.app/games.html" class="social-button">Back To Games</a>
         <div class="embed-container">
             <!-- Embedded Link to Y8 Slope Game -->
             <iframe src="https://slopegame.online/" frameborder="0" allowfullscreen></iframe>
