--- a/slope.html
+++ b/slope.html
@@ -40,7 +40,7 @@
         <a href="https://incognitocherry.vercel.app/games.html" class="social-button">Back To Games</a>
         <div class="embed-container">
             <!-- Embedded Link to Y8 Slope Game -->
-            <iframe src="https://slopegame.online/" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://kdata1.com/2020/05/slope/" width="100%" height="100%" frameborder="0" border="0" scrolling="no" class="iframe-default " allowfullscreen=""></iframe>
         </div>
     </div>
 </body>
