--- a/slope.html
+++ b/slope.html
@@ -32,17 +32,9 @@
     </style>
 </head>
 
-<body>
-    <div class="header">
-        <h1>Play Slope Game</h1>
-    </div>
-    <div class="container">
-        <a href="https://incognitocherry.vercel.app/games.html" class="social-button">Back To Games</a>
-        <div class="embed-container">
-            <!-- Embedded Link to Y8 Slope Game -->
-            <iframe src="https://kdata1.com/2020/05/slope/" width="100%" height="100%" frameborder="0" border="0" scrolling="no" class="iframe-default " allowfullscreen=""></iframe>
-        </div>
-    </div>
+<body data-new-gr-c-s-check-loaded="14.1129.0" data-gr-ext-installed="" data-new-gr-c-s-loaded="14.1129.0">
+    <script> var cached="cached_me_please"</script>
+    <iframe id="iframehtml5" width="100%" height="100%" src="https://kdata1.com/2020/05/slope/" frameborder="0" border="0" scrolling="no" class="iframe-default " allowfullscreen=""></iframe>
 </body>
 
 </html>
