--- a/slope.html
+++ b/slope.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Slope Game</title>
     <style>
-               .container {
+        .container {
             max-width: 960px;
             margin: 0 auto;
             padding: 20px;
@@ -29,6 +29,20 @@
             width: 100%;
             height: 100%;
         }
+
+        .social-button {
+            display: block;
+            margin-top: 20px;
+            text-decoration: none;
+            background-color: #007bff;
+            color: #fff;
+            padding: 10px 20px;
+            border-radius: 5px;
+        }
+
+        .social-button:hover {
+            background-color: #0056b3;
+        }
     </style>
 </head>
 
@@ -40,7 +54,7 @@
         <a href="https://incognitocherry.vercel.app/games.html" class="social-button">Back To Games</a>
         <div class="embed-container">
             <!-- Embedded Link to Y8 Slope Game -->
-            <iframe src="http://trouta.com/slope.html" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://trouta.com/slope.html" frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
 </body>
