--- a/slope.html
+++ b/slope.html
@@ -29,20 +29,6 @@
             width: 100%;
             height: 100%;
         }
-
-        .social-button {
-            display: block;
-            margin-top: 20px;
-            text-decoration: none;
-            background-color: #007bff;
-            color: #fff;
-            padding: 10px 20px;
-            border-radius: 5px;
-        }
-
-        .social-button:hover {
-            background-color: #0056b3;
-        }
     </style>
 </head>
 
@@ -54,7 +40,7 @@
         <a href="https://incognitocherry.vercel.app/games.html" class="social-button">Back To Games</a>
         <div class="embed-container">
             <!-- Embedded Link to Y8 Slope Game -->
-            <iframe src="https://trouta.com/slope.html" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://kdata1.com/2020/05/slope/" frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
 </body>
