--- a/slope.html
+++ b/slope.html
@@ -40,7 +40,7 @@
         <a href="https://incognitocherry.vercel.app/games.html" class="social-button">Back To Games</a>
         <div class="embed-container">
             <!-- Embedded Link to Y8 Slope Game -->
-            <iframe src="https://kdata1.com/2020/05/slope/" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://kdata1.com/2020/05/slope/" frameborder="0" allowfullscreen loading="lazy"></iframe>
         </div>
     </div>
 </body>
