--- a/slope.html
+++ b/slope.html
@@ -5,31 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Slope Game</title>
-    <style>
-        .container {
-            max-width: 960px;
-            margin: 0 auto;
-            padding: 20px;
-            text-align: center;
-        }
-
-        .embed-container {
-            position: relative;
-            padding-bottom: 60%;
-            height: 0;
-            overflow: hidden;
-            margin-top: 20px;
-            margin-bottom: 20px;
-        }
-
-        .embed-container iframe {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
