--- a/slope.html
+++ b/slope.html
@@ -64,7 +64,7 @@
     <div class="container">
         <a href="https://incognitocherry.vercel.app/games.html" class="social-button">Back To Games</a>
         <div class="embed-container">
-            <iframe src="https://kdata1.com/2020/05/slope/" frameborder="0" allowfullscreen loading="lazy"></iframe>
+            <iframe src="https://slopegame.online/" frameborder="0" allowfullscreen loading="lazy"></iframe>
         </div>
     </div>
 </body>
