--- a/slope.html
+++ b/slope.html
@@ -12,11 +12,9 @@
     <div class="header">
         <h1>Play Slope Game</h1>
     </div>
-    <div class="container">
-        <a href="https://incognitocherry.vercel.app/games.html" class="social-button">Back To Games</a>
-        <div class="embed-container">
-            <iframe src="https://slopegame.online/" frameborder="0" allowfullscreen loading="lazy"></iframe>
-        </div>
+        <div class="calendar-container">
+        <iframe src="slopegame.online" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+    </div>
     </div>
 </body>
 
