--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +14,7 @@
         <h1>Cherry!!</h1>
         <div class="buttons-container">
             <a href="games.html" class="tbd-button">
-            <img src="Logos/games.png" alt="Games">
+                <img src="Logos/games.png" alt="Games">
             </a>
             <a href="#" class="tbd-button">TBD</a>
             <a href="#" class="tbd-button">TBD</a>
@@ -23,15 +24,8 @@
         </div>
     </header>
 
-    <div class="container">
-        <div id="content">
-            <h2>Bio</h2>
-            <p>Coming soon because I'm lazy</p>
-        </div>
-    </div>
-
     <div class="calendar-container">
-        <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23E67C73&ctz=America%2FChicago&showTz=1&showTabs=1&showPrint=0&showNav=0&src=Y183djF2cTVzNWtkN3NxNzltNGdubmxvbHBkZ0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23F4511E" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+        <iframe src="https://slopegame.online" style="border: none; width: 100%; height: 600px;"></iframe>
     </div>
 
     <footer class="footer">
@@ -48,4 +42,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
