--- a/slope.html
+++ b/slope.html
@@ -25,7 +25,7 @@
     </header>
 
     <div class="calendar-container">
-        <iframe src="https://slopegame.online" style="border: none; width: 100%; height: 600px;"></iframe>
+        <iframe src="https://kdata1.com/2020/05/slope/" style="border: none; width: 100%; height: 600px;"></iframe>
     </div>
 
     <footer class="footer">
