--- a/games.html
+++ b/games.html
@@ -19,8 +19,8 @@
             <img src="Logos/slope-game-logo4.jpg" alt="Slope Game Logo">
             <span>Slope Game</span>
         </a>
-        <a href="#" class="game-button">
-            <img src="#" alt="Game 2 Image">
+        <a href="colorjump.html" class="game-button">
+            <img src="" alt="Game 2 Image">
             <span>Game 2</span>
         </a>
         <!-- Add more game buttons as needed -->
