--- a/games.html
+++ b/games.html
@@ -20,7 +20,7 @@
             <span>Slope Game</span>
         </a>
         <a href="colorjump.html" class="game-button">
-            <img src="" alt="Game 2 Image">
+            <img src="Logos/unnamed.png" alt="Game 2 Image">
             <span>Game 2</span>
         </a>
         <!-- Add more game buttons as needed -->
