--- a/games.html
+++ b/games.html
@@ -21,7 +21,7 @@
         </a>
         <a href="colorjump.html" class="game-button">
             <img src="Logos/unnamed.png" alt="Game 2 Image">
-            <span>Game 2</span>
+            <span>Color Jump</span>
         </a>
         <!-- Add more game buttons as needed -->
     </div>
