--- a/colorjump.html
+++ b/colorjump.html
@@ -4,45 +4,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Slope Game</title>
-    <style>
-               .container {
-            max-width: 960px;
-            margin: 0 auto;
-            padding: 20px;
-            text-align: center;
-        }
-
-        .embed-container {
-            position: relative;
-            padding-bottom: 60%;
-            height: 0;
-            overflow: hidden;
-            margin-top: 20px;
-            margin-bottom: 20px;
-        }
-
-        .embed-container iframe {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-        }
-    </style>
+    <title>Cherry</title>
+    <link rel="icon" href="Logos/Instagram-Logo.png" type="image/png">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <div class="header">
-        <h1>Play Slope Game</h1>
-    </div>
-    <div class="container">
-        <a href="https://incognitocherry.vercel.app/games.html" class="social-button">Back To Games</a>
-        <div class="embed-container">
-            <!-- Embedded Link to Y8 Slope Game -->
-            <iframe src="https://slopegame.online/" frameborder="0" allowfullscreen></iframe>
+    <header class="header">
+        <h1>Cherry!!</h1>
+        <div class="buttons-container">
+            <a href="games.html" class="tbd-button">
+                <img src="Logos/games.png" alt="Games">
+            </a>
+            <a href="#" class="tbd-button">TBD</a>
+            <a href="#" class="tbd-button">TBD</a>
+            <a href="#" class="tbd-button">TBD</a>
+            <a href="#" class="tbd-button">TBD</a>
+            <a href="#" class="tbd-button">TBD</a>
         </div>
+    </header>
+
+    <div class="calendar-container">
+        <iframe src="http://www.freeonlinegames.com/embed/148922" width="800" height="600" frameborder="no" scrolling="no"></iframe>
     </div>
+
+    <footer class="footer">
+        <a href="https://twitter.com" class="social-button">
+            <img src="Logos/X-Logo.png" alt="Twitter Logo">
+        </a>
+        <a href="https://discord.gg/h9qFTEvUBe" class="social-button">
+            <img src="Logos/Discord-Logo.png" alt="Discord Logo">
+        </a>
+        <a href="https://www.instagram.com/ubergdooper" class="social-button">
+            <img src="Logos/Instagram-Logo-2.png" alt="Instagram Logo">
+        </a>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
