--- a/colorjump.html
+++ b/colorjump.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cherry</title>
+    <title>Color Jump</title>
     <link rel="icon" href="Logos/Instagram-Logo.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <header class="header">
-        <h1>Cherry!!</h1>
+        <h1>Play Color Jump</h1>
         <div class="buttons-container">
             <a href="games.html" class="tbd-button">
                 <img src="Logos/games.png" alt="Games">
