--- a/games.html
+++ b/games.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cherry</title>
+    <title>Cherry|Games</title>
     <link rel="icon" href="Logos/Instagram-Logo.png" type="image/Favicon">
     <link rel="stylesheet" href="styles.css">
 </head>
