--- a/games.html
+++ b/games.html
@@ -12,6 +12,16 @@
 <body>
     <header class="header">
         <h1>Blessed Cherries Games</h1>
+        <div class="buttons-container">
+            <a href="games.html" class="tbd-button">
+                <img src="Logos/games.png" alt="Games">
+            </a>
+            <a href="#" class="tbd-button">TBD</a>
+            <a href="#" class="tbd-button">TBD</a>
+            <a href="#" class="tbd-button">TBD</a>
+            <a href="#" class="tbd-button">TBD</a>
+            <a href="#" class="tbd-button">TBD</a>
+        </div>
     </header>
 
     <div class="button-container">
