--- a/colorjump.html
+++ b/colorjump.html
@@ -25,7 +25,7 @@
     </header>
 
     <div class="calendar-container">
-        <iframe src="http://www.freeonlinegames.com/embed/148922" style="border: none; width: 100%; height: 600px;"></iframe>
+        <iframe src="https://suika-game.app/" style="border: none; width: 100%; height: 600px;"></iframe>
     </div>
 
     <footer class="footer">
