--- a/colorjump.html
+++ b/colorjump.html
@@ -24,7 +24,7 @@
         </div>
     </header>
 
-    <div class="calendar-container">
+    <div class="slope-container">
         <iframe src="https://suika-game.app/" style="border: none; width: 100%; height: 800px;"></iframe>
     </div>
 
